# universiteto-biblioteka

./: .clang-format  .gitignore  CMakeLists.txt  db.dmm  db_modelis.sql  docker-bake.hcl  docker-compose-dev.yml  example-config.json  readme.md
apiWrapper/: CMakeLists.txt  api.cpp
apiWrapper/include/ub/: api.hpp  structs.hpp
backend/: CMakeLists.txt  dockerfile  main.cpp
backend/api/: api.cpp  api.hpp  middlewares.hpp
backend/api/routes/: admin.hpp  auth.hpp  books.hpp  user.hpp
backend/database/: db.cpp  db.hpp  dbModelis.hpp  pool.hpp  queries.cpp  types.hpp
backend/utils/: config.cpp  config.hpp  dates.hpp  logger.hpp  tokens.hpp
backend/valdymas/: isdavimas.cpp  isdavimas.hpp  rezervavimas.cpp  rezervavimas.hpp  skolos.cpp  skolos.hpp  statistika.cpp  statistika.hpp
frontend/: CMakeLists.txt  dockerfile  main.cpp  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/books/[id]/: page.tsx
frontend/app/books/search/: page.tsx
frontend/app/home/: page.tsx
frontend/app/login/: page.tsx
frontend/app/register/: page.tsx
frontend/app/statistics/: page.tsx
frontend/app/user/istorija/: istorija-table.tsx  page.tsx
frontend/app/user/rezervacijos/: page.tsx
frontend/app/user/skolos/: page.tsx
frontend/lib/: api.ts
scripts/: sukurtiEgzempliorius.py  uzkrautiKnygas.py
universiteto-biblioteka-api/: Get Server Info.bru  bruno.json
universiteto-biblioteka-api/admin/: Atnaujinti Skolas.bru
universiteto-biblioteka-api/auth/: Login.bru  Register.bru  Token Info.bru
universiteto-biblioteka-api/books/: Get Egzemplioriai.bru  Get by ID.bru  Search.bru
universiteto-biblioteka-api/books/egzempliorius/: Grazinti.bru  Skolinti.bru  folder.bru
universiteto-biblioteka-api/environments/: dev.bru  prod.bru
universiteto-biblioteka-api/user/: Istorija.bru  Skolos.bru
